Lucene Change Log

For more information on past and future Lucene versions, please see:
http://s.apache.org/luceneversions

======================= Lucene 10.2.0 =======================

API Changes
---------------------
(No changes)

New Features
---------------------
(No changes)

Improvements
---------------------
(No changes)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
(No changes)

Other
---------------------
(No changes)

======================= Lucene 10.1.0 =======================

API Changes
---------------------

* GITHUB#13859: Allow open-ended ranges in Intervals range queries. (Mayya Sharipova)

* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)

* GITHUB#13957: Removed LeafSimScorer class, to save its overhead. Scorers now
  compute scores directly from a SimScorer, postings and norms. (Adrien Grand)

* GITHUB#13998: Add IndexInput::isLoaded to determine if the contents of an
  input is resident in physical memory. (Chris Hegarty)

New Features
---------------------
* GITHUB#14034: Add support for storing term vectors in FeatureField. (Jim Ferenczi)

Improvements
---------------------

* GITHUB#13986: Allow easier configuration of the Panama Vectorization provider with
  newer Java versions. Set the `org.apache.lucene.vectorization.upperJavaFeatureVersion`
  system property to increase the set of Java versions that Panama Vectorization will
  provide optimized implementations for. (Chris Hegarty)

* GITHUB#266: TieredMergePolicy now allows merging up to maxMergeAtOnce
  segments for merges below the floor segment size, even if maxMergeAtOnce is
  bigger than segsPerTier. (Adrien Grand)

* GITHUB#14033: Combine all postings enum impls of the default codec into a
  single class. (Adrien Grand)

Optimizations
---------------------

* GITHUB#13828: Reduce long[] array allocation for bitset in readBitSetIterator. (Zhang Chao)
