@@ -40,9 +40,10 @@ final class DisjunctionMaxScorer extends DisjunctionScorer {
    *     as they are summed into the result.
    * @param subScorers The sub scorers this Scorer should iterate on
    */
-  DisjunctionMaxScorer(float tieBreakerMultiplier, List<Scorer> subScorers, ScoreMode scoreMode)
+  DisjunctionMaxScorer(
+      float tieBreakerMultiplier, List<Scorer> subScorers, ScoreMode scoreMode, long leadCost)
       throws IOException {
-    super(subScorers, scoreMode);
+    super(subScorers, scoreMode, leadCost);
     this.subScorers = subScorers;
     this.tieBreakerMultiplier = tieBreakerMultiplier;
     if (tieBreakerMultiplier < 0 || tieBreakerMultiplier > 1) {
