@@ -17,6 +17,7 @@
 package org.apache.lucene.search;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
 import org.apache.lucene.index.LeafReaderContext;
 import org.apache.lucene.index.PostingsEnum;
@@ -52,7 +53,8 @@ final class MultiTermQueryConstantScoreBlendedWrapper<Q extends MultiTermQuery>
           int fieldDocCount,
           Terms terms,
           TermsEnum termsEnum,
-          List<TermAndState> collectedTerms)
+          List<TermAndState> collectedTerms,
+          long leadCost)
           throws IOException {
         DocIdSetBuilder otherTerms = new DocIdSetBuilder(context.reader().maxDoc(), terms);
         PriorityQueue<PostingsEnum> highFrequencyTerms =
@@ -110,7 +112,7 @@ final class MultiTermQueryConstantScoreBlendedWrapper<Q extends MultiTermQuery>
           }
         } while (termsEnum.next() != null);
 
-        DisiPriorityQueue subs = new DisiPriorityQueue(highFrequencyTerms.size() + 1);
+        List<DisiWrapper> subs = new ArrayList<>(highFrequencyTerms.size() + 1);
         for (DocIdSetIterator disi : highFrequencyTerms) {
           Scorer s = wrapWithDummyScorer(this, disi);
           subs.add(new DisiWrapper(s, false));
@@ -118,7 +120,7 @@ final class MultiTermQueryConstantScoreBlendedWrapper<Q extends MultiTermQuery>
         Scorer s = wrapWithDummyScorer(this, otherTerms.build().iterator());
         subs.add(new DisiWrapper(s, false));
 
-        return new WeightOrDocIdSetIterator(new DisjunctionDISIApproximation(subs));
+        return new WeightOrDocIdSetIterator(new DisjunctionDISIApproximation(subs, leadCost));
       }
     };
   }
